# openlake

./: .dockerignore  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  Dockerfile.openlake  LICENSE  README.md  config.toml  config.yaml  flink_checkpoints_summary.json  flink_taskmanager_logs.txt  openlake_logs.txt  ping_command.py  rust-toolchain.toml
.github/workflows/: tests.yml
benchmarks/: README.md
charts/openlake/: .helmignore  Chart.yaml  values.yaml
charts/openlake/templates/: _helpers.tpl  configmap.yaml  secret.yaml  service.yaml  statefulset.yaml
cli/: Cargo.toml
cli/Agents.MD/: README.md
cli/Agents/_MD/: README.md
cli/Benchmark/_CPU/: README.md
cli/Cluster_up/: README.md
cli/cluster_format/: README.md
cli/cluster_topology/: README.md
cli/node_info/: README.md
cli/src/: cli.rs  cluster.rs  config.rs  main.rs
cli/src/commands/: bench.rs  config.rs  mod.rs  scrub.rs
cli/src/commands/bench/: client.rs  dct.rs  mod.rs  mode.rs  report.rs  target.rs
cli/src/commands/cluster/: benchmark_website.rs  cludsterinfo.rs  clusterinfo.rs  clustureinfo.rs  config.rs  down.rs  format.rs  mod.rs  ping.rs  status.rs  topology.rs  up.rs
cli/src/commands/disk/: info.rs  mod.rs
cli/src/commands/node/: info.rs  mod.rs
cli/src/commands/version/: mod.rs
crates/openlake_cli/: Cargo.toml
crates/openlake_cli/src/: main.rs
crates/openlake_io/: Cargo.toml  build.rs
crates/openlake_io/src/: backend.rs  error.rs  kv.rs  kv_slab.rs  lib.rs  local_fs.rs  node_info.rs  purge.rs  rdma_backend.rs  remote_fs.rs  rpc.rs  stream.rs  tuning.rs  types.rs  xl_meta.rs
crates/openlake_io/src/alloc/: buffer.rs  memory_pool.rs  mod.rs
crates/openlake_io/src/rdma/: bootstrap.rs  buffers.rs  mlx5dv_sys.rs  mod.rs  node.rs  socket.rs  wire.rs  wr.rs
crates/openlake_kv_client/: build.sh
crates/openlake_kv_client/python/openlake_client/: __main__.py
crates/openlake_kv_client/src/: client.rs  lib.rs  protocol.rs  shm_local.rs  transport.rs
crates/openlake_rdma/: README.md
crates/openlake_rdma/src/: error.rs  lib.rs  memory.rs  work.rs
crates/openlake_rdma/src/backend/: loopback.rs
crates/openlake_rdma/tests/: loopback.rs
crates/openlake_server/: Cargo.toml
crates/openlake_server/src/: auth.rs  config.rs  engine.rs  in_memory_store.rs  kv_runtime.rs  kv_slab.rs  lock_server.rs  main.rs  rdma_server.rs  rpc_server.rs  tls_material.rs
crates/openlake_server/src/s3/: app.rs  body_source.rs  error.rs  listener.rs  mod.rs  state.rs  xml.rs
crates/openlake_server/src/s3/handlers/: buckets.rs  mod.rs  objects.rs
crates/openlake_storage/: Cargo.toml
crates/openlake_storage/src/: cluster.rs  dsync.rs  ec.rs  engine.rs  error.rs  format.rs  kv_backend.rs  kv_engine.rs  lib.rs  managed.rs  object.rs  rdma_engine.rs
crates/phenomenal_cli/: Cargo.toml
crates/phenomenal_cli/src/: main.rs
crates/phenomenal_io/: Cargo.toml  build.rs
crates/phenomenal_io/examples/: rdma_loopback.rs
crates/phenomenal_io/src/: backend.rs  lib.rs  local_fs.rs  rdma_backend.rs  remote_fs.rs  rpc.rs  stream.rs  tuning.rs  types.rs  xl_meta.rs
crates/phenomenal_io/src/alloc/: mod.rs
crates/phenomenal_io/src/rdma/: ah_cache.rs  bootstrap.rs  buffers.rs  device.rs  mod.rs  node.rs  rdma_buf.rs  socket.rs  wire.rs  wr.rs
crates/phenomenal_server/: Cargo.toml
crates/phenomenal_server/src/: auth.rs  config.rs  lock_server.rs  main.rs  rdma_server.rs  rpc_server.rs  tls_material.rs
crates/phenomenal_server/src/s3/: app.rs  body_source.rs  error.rs  listener.rs  state.rs  xml.rs
crates/phenomenal_server/src/s3/handlers/: buckets.rs  objects.rs
crates/phenomenal_server/src/s3/middleware/: mod.rs  sigv4.rs
crates/phenomenal_storage/: Cargo.toml
crates/phenomenal_storage/src/: cluster.rs  dsync.rs  ec.rs  engine.rs  error.rs  format.rs  lib.rs  object.rs
docker/: openlake.Dockerfile
docs/: architecture.rst  cli_commands.rst  cli_reference.rst  cluster_management.rst  cluster_operations.rst  contributing.rst  getting_started.rst  index.rst  installation.rst
docs/developer/: environment_setup.rst  kv_offload.rst
docs/examples/: docker_4plus2_cluster.rst  spark_openlake.rst
docs/mintlify-site/: docs.json  index.mdx
docs/mintlify-site/developer/: environment-setup.mdx
docs/mintlify-site/user/: cli-reference.mdx  cluster-operations.mdx  flink-openlake.mdx
docs/user/: flink-openlake.rst
docs/user/examples/compute-workloads/: flink-checkpont.rst
ui/: package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  main.jsx
ui/src/components/ChartCard/: ChartCard.css  ChartCard.jsx
ui/src/components/CreateBucketModal/: CreateBucketModal.css  CreateBucketModal.jsx
ui/src/components/FilePreview/: FilePreview.css  FilePreview.jsx
ui/src/components/FileTable/: FileTable.css  FileTable.jsx
ui/src/components/FolderTree/: FolderTree.css  FolderTree.jsx
ui/src/components/Navbar/: Navbar.css  Navbar.jsx
ui/src/components/NotificationPanel/: NotificationPanel.css  NotificationPanel.jsx
ui/src/components/ProfileMenu/: ProfileMenu.css  ProfileMenu.jsx
ui/src/components/ProgressBar/: ProgressBar.css  ProgressBar.jsx
ui/src/components/Sidebar/: Sidebar.css  Sidebar.jsx
ui/src/components/Statcard/: Statcard.css  Statcard.jsx
ui/src/components/Toast/: Toast.css  Toast.jsx
ui/src/components/UploadModal/: UploadModal.css  UploadModal.jsx
ui/src/context/: ThemeContext.css  ThemeContext.jsx
ui/src/layouts/MainLayout/: MainLayout.jsx
ui/src/pages/Analytics/: Analytics.css  Analytics.jsx
ui/src/pages/Buckets/: Buckets.css  Buckets.jsx
ui/src/pages/Dashboard/: Dashboard.css  Dashboard.jsx
ui/src/pages/ObjectBrowser/: ObjectBrowser.css  ObjectBrowser.jsx
ui/src/pages/Settings/: Settings.jsx
