[package]
name                   = "openlake_cli"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[[bin]]
name = "openlake"
path = "src/main.rs"

[dependencies]
openlake_io      = { path = "../crates/openlake_io" }
openlake_storage = { path = "../crates/openlake_storage" }

clap               = { workspace = true }
anyhow             = { workspace = true }
compio             = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
futures-util       = { workspace = true }
cyper              = { workspace = true }
