[package]
name                   = "openlake_cli"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[[bin]]
name = "openlake"
path = "src/main.rs"

[features]
default = []
rdma    = ["openlake_io/rdma", "dep:rdma-mummy-sys", "dep:serde_json"]

[dependencies]
openlake_io      = { path = "../crates/openlake_io" }
openlake_server  = { path = "../crates/openlake_server" }
openlake_storage = { path = "../crates/openlake_storage" }

clap               = { workspace = true }
anyhow             = { workspace = true }
compio             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
futures-util       = { workspace = true }

cyper       = { workspace = true }
cyper-axum  = { workspace = true }
axum        = { workspace = true }
bytes       = { workspace = true }
futures     = { workspace = true }

# SigV4 signing for the admin /ping liveness probe. Mirrors the server's
# verifier so signatures the CLI produces are accepted by the S3 listener.
http                   = { workspace = true }
aws-sigv4              = { workspace = true }
aws-credential-types   = { workspace = true }
aws-smithy-runtime-api = { workspace = true }

hdrhistogram = "7"
libc         = "0.2"

# RDMA bench path. Only pulled in when --features rdma.
rdma-mummy-sys = { version = "0.2", optional = true }
serde_json     = { workspace = true, optional = true }
